[package]
name = "lobby-is-up"
version = "0.1.0"
authors = ["my name <my@email.address>"]
edition = "2021"

[dependencies]
dashmap = "5.4.0"
once_cell = "1.17.1"
regex = "1.8.1"
serde = "1.0.160"
serde_derive = "1.0.160"
serde_json = "1.0.96"
serde_with = "2.3.3"
serenity = { version="0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal"] }
tokio-tungstenite = "0.18.0"
url = "2.3.1"
