[package]
name = "lobby-is-up"
version = "0.1.0"
authors = ["my name <my@email.address>"]
edition = "2021"

[dependencies]
dashmap = "5.4.0"
futures = "0.3.28"
once_cell = "1.17.1"
regex = "1.8.1"
serde = "1.0.160"
serde_derive = "1.0.160"
serde_json = "1.0.96"
serenity = { version="0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
thiserror = "1.0.40"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal"] }
tokio-tungstenite = { version = "0.18", features = ["native-tls"] }
tracing = "0.1.37"
tracing-bunyan-formatter = "0.3.7"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
url = "2.3.1"
